--- a/AAPL_MSFT_analisys.ipynb
+++ b/AAPL_MSFT_analisys.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "1c73ea49",
+   "id": "7fd63767",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "030c2717",
+   "id": "a26d6c9e",
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "3183f7c9",
+   "id": "f823e7d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "be9fb714",
+   "id": "e5d28e5c",
    "metadata": {},
    "outputs": [
     {
@@ -26320,15 +26320,15 @@
     "                          xref='x', yref='paper',\n",
     "                          line_width=2, line_color='red'\n",
     "                      ),dict(\n",
-    "                        type='line',  # Tipo de forma (linha)\n",
-    "                        x0=df_AAPL['Date'].min(),  # Ponto de partida no eixo X\n",
-    "                        y0=210,  # Posição no eixo Y\n",
-    "                        x1=df_AAPL['Date'].max(),  # Ponto de término no eixo X\n",
-    "                        y1=210,  # Posição no eixo Y (mesma posição para ser uma linha horizontal)\n",
+    "                        type='line',\n",
+    "                        x0=df_AAPL['Date'].min(),  \n",
+    "                        y0=210,  \n",
+    "                        x1=df_AAPL['Date'].max(), \n",
+    "                        y1=210,  \n",
     "                        line=dict(\n",
-    "                            color='green',  # Cor da linha\n",
-    "                            width=2,  # Largura da linha\n",
-    "                            dash='dash'  # Estilo da linha (linha pontilhada)\n",
+    "                            color='green',  \n",
+    "                            width=2,  \n",
+    "                            dash='dash'  \n",
     "                        )\n",
     "                    )\n",
     "                  ],\n",
@@ -26355,7 +26355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3462728a",
+   "id": "90f247b3",
    "metadata": {},
    "outputs": [],
    "source": []
